--- a/index.html
+++ b/index.html
@@ -41,19 +41,25 @@
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<section data-background="assets/hacking_pattern_background.jpg">
 						<h2>Use multiple threads</h2>
-						<p class="fragment">You will get results faster!</p>
+						<h2>You will get results faster!</h2>
 					</section>
 					<section data-background="assets/hacking_pattern_background.jpg">
  							<img data-src="assets/bullshit_girl.jpg">
+					</section>
+					<section data-background="assets/hacking_pattern_background.jpg">
+						<img data-src="assets/concurrency_in_practice.jpg">
+					</section>
+					<section data-background="assets/hacking_pattern_background.jpg">
+						<iframe width="800" height="600" src="https://www.youtube.com/embed/pXzKfhTkc4o" frameborder="0" allowfullscreen></iframe>
 					</section>
 				</section>
 				<!-- Short introduction to Actor model -->
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<h2>Actor Model</h2>
-					<p class="fragment">All physically possible computation can be directly implemented in Actors</p>
-					<p class="fragment">Actor model is mathematical model</p>
 					<p class="fragment">Created by Carl Hewitt - 1973</p>
+					<p class="fragment">Actor model is mathematical model</p>
 					<p class="fragment">Inspired by physics</p>
+					<p class="fragment">All physically possible computation can be directly implemented in Actors</p>
 				</section>
 				<!-- Introduction of the actor-->
 				<section data-background="assets/hacking_pattern_background.jpg">
@@ -68,34 +74,41 @@
 				</section>
 				<section data-background="assets/actor-bacground.jpg">
 				  <h2>Actor has</h2>
-					<p class="fragment">Reference</p>
-					<p class="fragment">State</p>
-					<p class="fragment">Behaviour</p>
-					<p class="fragment">Mailbox</p>
-					<p class="fragment">Children</p>
+					<p>Reference</p>
+					<p>State</p>
+					<p>Behaviour</p>
+					<p>Mailbox</p>
+					<p>Children</p>
 				</section>
 				<!-- Actor System -->
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<h2>One actor is no actor</h2>
+					<p class="fragment">They come in system</p>
 				</section>
 				<section data-background="assets/actor_system.jpg">
 				</section>
 				<section data-background="assets/hacking_pattern_background.jpg">
-				  <h2>Actor Model</h2>
-					<p class="fragment">Reference</p>
-					<p class="fragment">State</p>
-					<p class="fragment">Behaviour</p>
-					<p class="fragment">Mailbox</p>
-					<p class="fragment">Children</p>
+				  <h2>Actor System</h2>
+					<p>Container</p>
+					<p>Heavyweight</p>
+					<p>Shared facilities</p>
+					<p>like: configuration, logging</p>
+				</section>
+				<!-- Message -->
+				<section data-background="assets/hacking_pattern_background.jpg">
+					<img data-src="assets/message.png"/>
 				</section>
 
+				<!-- Actor Messages -->
+				<section data-background="assets/hacking_pattern_background.jpg">
+					<img data-src="assets/sending_messages.png"/>
+				</section>
 				<!-- Summary -->
 			  <section data-background="assets/hacking_pattern_background.jpg">
 					<h2>Summary</h2>
-			  	<span class="attribution">Attribution Text</span>
-					<p class="fragment" class="attribution">Attribution Text</p>
-					<p class="fragment">Summary 2</p>
-					<p class="fragment">Summary 3</p>
+					<p>Very efficient model</p>
+					<p>Available on multiple platforms</p>
+					<p>Easy to use and powerful</p>
 				</section>
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<h1>Thank you, questions?</h1>
