--- a/index.html
+++ b/index.html
@@ -24,30 +24,33 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background="assets/spreadit.jpg">
+				<section data-background="assets/hack_your_career.jpg">
 				</section>
-				<section data-background="assets/spreadit.jpg" data-state="dim-animation" data-background-transition="none">
-    				<h1>Actor Model</h1>
+				<section data-background="assets/hack_your_career.jpg" data-state="dim-animation" data-background-transition="none">
+    				<h1>Software Engineering</h1>
     				by
-    				Łukasz Szymik, November 2016<br>
+    				Łukasz Szymik, December 2017<br>
     				<small><a href="https://github.com/lszymik">github.com/lszymik</a> &bull; <a href="https://twitter.com/lszymik">@lszymik</a></small>
 				</section>
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<h2>Agenda</h2>
-					<p>Actor model</p>
-					<p>Example use cases</p>
-					<p>Summary</p>
+					<p>Why do we need software engineering?</p>
+					<p>Small portion of the history</p>
+					<p>The newest trends</p>
+					<p>A lot of examples and hints</p>
+				</section>
+				<section data-background="assets/hacking_pattern_background.jpg">
+					<h2>About me</h2>
+					<p>Passionate software developer</p>
+					<p>Product Manager at SAP Hybris</p>
+					<p>Building microservices and platforms</p>
 				</section>
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<section data-background="assets/hacking_pattern_background.jpg">
-						<h2>Use multiple threads</h2>
-						<h2>You will get results faster!</h2>
+						<h2>Software Engineering</h2>
 					</section>
 					<section data-background="assets/hacking_pattern_background.jpg">
- 							<img data-src="assets/bullshit_girl.jpg">
-					</section>
-					<section data-background="assets/hacking_pattern_background.jpg">
-						<img data-src="assets/concurrency_in_practice.jpg">
+ 						<img data-src="assets/rocket.jpg">
 					</section>
 					<section data-background="assets/hacking_pattern_background.jpg">
 						<iframe width="800" height="600" src="https://www.youtube.com/embed/pXzKfhTkc4o" frameborder="0" allowfullscreen></iframe>
