--- a/index.html
+++ b/index.html
@@ -126,15 +126,78 @@
 						<img data-src="assets/architecture.png"/>
 					</section>
 					<section>
+						<img data-src="assets/uml.jpg"/>
+					</section>
+					<section>
 						<h2>Implementation</h2>
+					</section>
+					<section>
+						<img data-src="assets/deadline.jpg"/>
 					</section>
 					<section>
 						<h2>Integration & Test</h2>
 					</section>
 					<section>
-						<h2>Maitanance</h2>
+						<img data-src="assets/fail1.jpg"/>
+					</section>
+					<section>
+						<img data-src="assets/fail2.jpg"/>
+					</section>
+					<section>
+						<img data-src="assets/fail3.jpg"/>
+					</section>
+					<section>
+						<h2>Maintenance</h2>
 					</section>
 				</section>
+				<section>
+					<section>
+						<img data-src="assets/waterfall.png"/>
+					</section>
+					<section>
+						<img data-src="assets/waterfall2.png"/>
+					</section>
+					<section>
+						<h2>Prototyping Model</h2>
+					</section>
+					<section>
+						<h2>Incremental Model</h2>
+					</section>
+				</section>
+				<section>
+					<img data-src="assets/projectphoenix.jpg"/>
+				</section>
+				<section>
+					<section>
+						<h2>UML</h2>
+					</section>
+					<section>
+						<h2>Structure diagrams:</h2>
+						<h2>Component diagram</h2>
+						<h2>Class diagram</h2>
+					</section>
+					<section>
+						<h2>Behavior diagrams:</h2>
+						<h2>Activity diagram</h2>
+						<h2>Use case diagram</h2>
+					</section>
+					<section>
+						<h2>Interaction diagrams:</h2>
+						<h2>Communication diagram</h2>
+						<h2>Sequence diagram</h2>
+					</section>
+					<section>
+						<img data-src="assets/classdiagram.jpg"/>
+					</section>
+					<section>
+						<img data-src="assets/usecasediagram.png"/>
+					</section>
+					<section>
+						<img data-src="assets/sequencediagram.jpg"/>
+					</section>
+				</section>
+
+
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<h1>Thank you, questions?</h1>
 				</section>
