--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<h2>Application of engineering to the development of software</h2>
 					</section>
 					<section>
-						<h2>Requirements, Implementation, Test, Deployment, Maitanance</h2>
+						<h2>Requirements, Implementation, Test, Deployment, Maintenance</h2>
 					</section>
 				</section>
 				<section>
@@ -120,7 +120,7 @@
 						<img data-src="assets/welldone.gif"/>
 					</section>
 					<section>
-						<h2>Desing</h2>
+						<h2>Design</h2>
 					</section>
 					<section>
 						<img data-src="assets/architecture.png"/>
@@ -196,8 +196,236 @@
 						<img data-src="assets/sequencediagram.jpg"/>
 					</section>
 				</section>
+				<section>
+					<section>
+						<h2>Designx patterns</h2>
+					</section>
+					<section>
+						<img data-src="assets/patterns_book.jpeg"/>	
+					</section>
+					<section>
+						<h2>In software engineering, a software design pattern is a general reusable solution to a commonly occurring problem within a given context in software design.</h2>
+					</section>
+					<section>
+						<h2>Creational:</h2>
+					</section>
+					<section>
+						<h2>Singleton</h2>
+					</section>
+					<section>
+						<h2>Structural:</h2>
+					</section>
+					<section>
+						<h2>Facade</h2>
+					</section>
+					<section>
+						<h2>Behavioral:</h2>
+					</section>
+					<section>
+						<h2>Observer</h2>
+					</section>
+					<section>
+						<h2>SOLID</h2>
+					</section>
+					<section>
+						<h2>Single responsibility principle</h2>
+					</section>
+					<section>
+						<h2>Open/closed principle</h2>
+					</section>
+					<section>
+						<h2>Liskov substitution principle</h2>
+					</section>
+					<section>
+						<h2>Interface segregation principle</h2>
+					</section>
+					<section>
+						<h2>Dependency inversion principle</h2>
+					</section>
+					<section>
+						<h2>KISS</h2>
+					</section>
+				</section>
 
-
+				<section>
+					<section>
+						<h2>The only constant is change</h2>
+					</section>
+					<section>
+						<h2>The only constant is change</h2>
+						<h4>* Random quote from the Internet</h4>
+					</section>
+				</section>
+				
+				<section>
+					<section>
+						<h2>Agile</h2>
+					</section>
+					<section>
+						<h2>Manifesto</h2>
+					</section>
+					<section>
+						<ul>    
+						<li class=”fragment”><b>Individuals and Interactions</b> over processes and tools</li>
+						</ul>    
+					</section>
+					<section>
+						<ul>    
+						<li class=”fragment”><b>Individuals and Interactions</b> over processes and tools</li>
+						<li class=”fragment”><b>Working software</b> over comprehensive documentation</li>
+						</ul>    
+					</section>
+					<section>
+						<ul>    
+						<li class=”fragment”><b>Individuals and Interactions</b> over processes and tools</li>
+						<li class=”fragment”><b>Working software</b> over comprehensive documentation</li>
+						<li class=”fragment”><b>Customer collaboration</b> over contract negotiation</li>
+						</ul>    
+					</section>
+					<section>
+						<ul>    
+						<li class=”fragment”><b>Individuals and Interactions</b> over processes and tools</li>
+						<li class=”fragment”><b>Working software</b> over comprehensive documentation</li>
+						<li class=”fragment”><b>Customer collaboration</b> over contract negotiation</li>
+						<li class=”fragment”><b>Responding to change</b> over following a plan</li>
+						</ul>    
+					</section>
+					<section>
+						<img data-src="assets/bullshit_girl.jpg"/>	
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Scrum</h2>
+					</section>
+					<section>
+						<img data-src="assets/developers.png"/>
+					</section>
+					<section>
+						<h2>Product Owner</h2>
+					</section>
+					<section>
+						<h2>Scrum master</h2>
+					</section>
+					<section>
+						<h2>Development team</h2>
+					</section>
+					<section>
+						<h2>What is the size of development team?</h2>
+					</section>
+					<section>
+						<h2>3 - 9 developers</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Backlog</h2>
+					</section>
+					<section>
+						<h2>Product Backlog</h2>
+					</section>
+					<section>
+						<img data-src="assets/backlog.png"/>
+					</section>
+					<section>
+						<h2>Sprint Backlog</h2>
+					</section>
+					<section>
+						<img data-src="assets/sprint.png"/>
+					</section>
+					<section>
+						<h2>Backlog must be ordered</h2>
+					</section>
+					<section>
+						<h2>Product increment</h2>
+						<h2>...potentially shippable</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Sprint</h2>
+					</section>
+					<section>
+						<h2>Sprint planning</h2>
+					</section>
+					<section>
+						<h2>Daily scrum</h2>
+					</section>
+					<section>
+						<h2>Sprint review</h2>
+					</section>
+					<section>
+						<h2>Retrospective</h2>
+					</section>
+					<section>
+						<h2>Backlog refinement</h2>
+					</section>
+					<section>
+						<h2>Sprint cancelling! never do it!</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Definition of Done</h2>
+					</section>
+					<section>
+						<h2>Velocity</h2>
+					</section>
+					<section>
+						<h2>Spike</h2>
+					</section>
+					<section>
+						<h2>Minimum viable product</h2>
+					</section>
+					<section>
+						<h2>Riskiest Assumption Test</h2>
+					</section>
+					<section>
+						<h2>Proof of concept</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Kanban</h2>
+					</section>
+					<section>
+						<img data-src="assets/kanban.png"/>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Team organization</h2>
+					</section>
+					<section>
+						<h2>Manager</h2>
+					</section>
+					<section>
+						<h2>Couch</h2>
+					</section>
+					<section>
+						<h2>Team specialization</h2>
+					</section>
+					<section>
+						<img data-src="assets/bus.jpg"/>
+					</section>
+				</section>
+				<section>
+					<h2>Scrum of scrums</h2>
+				</section>
+				<section>
+					<section>
+						<h2>Organization</h2>
+					</section>
+					<section>
+						<h2>Set the goal and boundaries</h2>
+					</section>
+					<section>
+						<h2>Define product</h2>
+					</section>
+					<section>
+						<h2>Define minimal requirements</h2>
+					</section>
+				</section>
 				<section data-background="assets/hacking_pattern_background.jpg">
 					<h1>Thank you, questions?</h1>
 				</section>
