--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 						<h2>Software Engineering</h2>
 					</section>
 				</section>
-				<section>
-					<section data-background="assets/hacking_pattern_background.jpg">
+				<section data-background="assets/hacking_pattern_background.jpg">
+					<section>
 						<h2>Software Engineering</h2>
 					</section>
 					<section>
@@ -103,8 +103,8 @@
 						<h2>Requirements, Implementation, Test, Deployment, Maintenance</h2>
 					</section>
 				</section>
-				<section>
-					<section data-background="assets/hacking_pattern_background.jpg">
+				<section data-background="assets/hacking_pattern_background.jpg">
+					<section>
 						<h2>Software Engineering Phases</h2>
 					</section>
 					<section>
@@ -150,7 +150,7 @@
 						<h2>Maintenance</h2>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<img data-src="assets/waterfall.png"/>
 					</section>
@@ -164,10 +164,10 @@
 						<h2>Incremental Model</h2>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<img data-src="assets/projectphoenix.jpg"/>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>UML</h2>
 					</section>
@@ -196,9 +196,9 @@
 						<img data-src="assets/sequencediagram.jpg"/>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
-						<h2>Designx patterns</h2>
+						<h2>Design patterns</h2>
 					</section>
 					<section>
 						<img data-src="assets/patterns_book.jpeg"/>	
@@ -245,9 +245,12 @@
 					<section>
 						<h2>KISS</h2>
 					</section>
+					<section data-background="assets/hacking_pattern_background.jpg">
+						<h2>Test Driven Development</h2>
+					</section>
 				</section>
 
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>The only constant is change</h2>
 					</section>
@@ -257,7 +260,7 @@
 					</section>
 				</section>
 				
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Agile</h2>
 					</section>
@@ -294,7 +297,7 @@
 						<img data-src="assets/bullshit_girl.jpg"/>	
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Scrum</h2>
 					</section>
@@ -317,7 +320,7 @@
 						<h2>3 - 9 developers</h2>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Backlog</h2>
 					</section>
@@ -340,8 +343,11 @@
 						<h2>Product increment</h2>
 						<h2>...potentially shippable</h2>
 					</section>
+					<section>
+						<img data-src="assets/triangle.png"/>	
+					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Sprint</h2>
 					</section>
@@ -364,7 +370,7 @@
 						<h2>Sprint cancelling! never do it!</h2>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Definition of Done</h2>
 					</section>
@@ -384,7 +390,7 @@
 						<h2>Proof of concept</h2>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Kanban</h2>
 					</section>
@@ -392,7 +398,7 @@
 						<img data-src="assets/kanban.png"/>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Team organization</h2>
 					</section>
@@ -409,10 +415,10 @@
 						<img data-src="assets/bus.jpg"/>
 					</section>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<h2>Scrum of scrums</h2>
 				</section>
-				<section>
+				<section data-background="assets/hacking_pattern_background.jpg">
 					<section>
 						<h2>Organization</h2>
 					</section>
