--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Actor Model</title>
+		<title>Software Engineering</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black-future.css">
@@ -29,7 +29,7 @@
 				<section data-background="assets/hack_your_career.jpg" data-state="dim-animation" data-background-transition="none">
     				<h1>Software Engineering</h1>
     				by
-    				Łukasz Szymik, December 2017<br>
+    				Łukasz Szymik, January 2019<br>
     				<small><a href="https://github.com/lszymik">github.com/lszymik</a> &bull; <a href="https://twitter.com/lszymik">@lszymik</a></small>
 				</section>
 				<section data-background="assets/hacking_pattern_background.jpg">
@@ -115,9 +115,6 @@
 					</section>
 					<section>
 						<img data-src="assets/okna.jpg"/>
-					</section>
-					<section>
-						<img data-src="assets/welldone.gif"/>
 					</section>
 					<section>
 						<h2>Design</h2>
